# enigma-notes

./: .gitignore  LICENSE  README.md  biome.json  enigma.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/editor/: page.tsx
app/settings/: page.tsx
components/: GeolocationMessage.tsx  ReactQueryClientProvider.tsx  index.tsx
components/AccountNotesView/: CalendarViewerContents.tsx  TreeViewerContents.tsx  ViewerType.tsx  index.tsx  mockData.ts  style.ts
components/Astronomy/: index.tsx
components/Loading/: index.tsx
components/MapLocation/: index.tsx
components/NewNote/: MenuItemsData.tsx  NewNoteMenuItem.tsx  index.tsx
components/NoteDate/: index.tsx
components/NoteEditorView/: index.tsx  state.ts
components/NoteParts/NoteDate/: index.tsx
components/NoteParts/TagNote/: index.tsx  (+1 more)
components/Settings/: CryptoKey.tsx  FeatureFlags.tsx  MapLocation.tsx  SaveLocations.tsx  TestEncryption.tsx  index.tsx  state.tsx
components/SideBar/: TreeViewerContents.tsx  ViewerType.tsx  index.tsx  mockData.ts  style.ts
components/SideBarOpener/: index.tsx
components/Style/: Form.tsx  Skeleton.tsx  index.tsx
components/Weather/: index.tsx
db/: appData.ts  init.ts  notes.ts  types.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  password.rs
src/db/: appData.ts  init.ts  notes.ts  types.ts
src/types/: views.ts
src/utils/: style.ts
util/: crypto.ts  query.ts  useCryptoKey.ts
utils/: style.ts
(+42 files in other folders)
